--- a/projetos/templates/projetos/projetos_fechados.html
+++ b/projetos/templates/projetos/projetos_fechados.html
@@ -44,7 +44,7 @@
   <br><br>
   
   {% comment %} Tabela com todos os projetos selecionados pelo filtro {% endcomment %}
-  <div class="projetos">
+  <div class="atualizar">
     
     {% if projetos %}
       <table id="projetos">
@@ -150,22 +150,9 @@
         <canvas id="chart-area"></canvas>
       </div>
 
-    {% else %}
-      <p>Não existem projetos disponíveis.</p>
-    {% endif %}
-
     <br><br>
     
     <script>
-
-      function carrega_pagina(){
-        filtra_data();
-        mostra_grafico();
-        {% include "tooltip.js" %}
-      }
-
-      window.onload = carrega_pagina
-
       var count_projects = 0;
       var count_alunos = 0;
       var prioridade1 = 0;
@@ -175,105 +162,99 @@
       var prioridade5 = 0;
       var prioridade6m = 0;
       var nao_definido = 0;
-
     </script>
 
-  </div>
+    <script>
 
-  <script>
+      function filtra_data() {  // REFERENTE AO SELETOR DE DATAS
 
-    function filtra_data() {  // REFERENTE AO SELETOR DE DATAS
+        count_projects = 0;
+        count_alunos = 0;
+        prioridade1 = 0;
+        prioridade2 = 0;
+        prioridade3 = 0;
+        prioridade4 = 0;
+        prioridade5 = 0;
+        prioridade6m = 0;
+        nao_definido = 0;
 
-      count_projects = 0;
-      count_alunos = 0;
-      prioridade1 = 0;
-      prioridade2 = 0;
-      prioridade3 = 0;
-      prioridade4 = 0;
-      prioridade5 = 0;
-      prioridade6m = 0;
-      nao_definido = 0;
+        var row = $('.row'); 
+        row.each(function(i, el) {
 
-      var row = $('.row'); 
-      row.each(function(i, el) {
+          count_projects = count_projects + 1;
+          var alunos = $(el).find("TD").find("OL");
+          count_alunos = count_alunos + alunos.children().length;
 
-        count_projects = count_projects + 1;
-        var alunos = $(el).find("TD").find("OL");
-        count_alunos = count_alunos + alunos.children().length;
+          $.each(alunos.children('li'), function() {
+            var target = $(this)
+            data = $(target).find('div.prioridade').text();
+            if(data == 1) {prioridade1 += 1;}
+            else if(data == 2) {prioridade2 += 1;}
+            else if(data == 3) {prioridade3 += 1;}
+            else if(data == 4) {prioridade4 += 1;}
+            else if(data == 5) {prioridade5 += 1;}
+            else if(data > 5) {prioridade6m += 1;}
+            else {nao_definido +=1;}
+          });
 
-        $.each(alunos.children('li'), function() {
-          var target = $(this)
-          data = $(target).find('div.prioridade').text();
-          if(data == 1) {prioridade1 += 1;}
-          else if(data == 2) {prioridade2 += 1;}
-          else if(data == 3) {prioridade3 += 1;}
-          else if(data == 4) {prioridade4 += 1;}
-          else if(data == 5) {prioridade5 += 1;}
-          else if(data > 5) {prioridade6m += 1;}
-          else {nao_definido +=1;}
         });
 
-      });
+      }
 
-    }
-
-    function mostra_grafico() { // REFERENTE AO PIE CHART
-      var config = {     // REFERENTE AO PIE CHART
-        type: 'pie',
-        data: {
-          datasets: [{
-            data: [
-              prioridade1,
-              prioridade2,
-              prioridade3,
-              prioridade4,
-              prioridade5,
-              prioridade6m,
-            ],
-            backgroundColor: [
-              "#2ecc71",
-              "#3498db",
-              "#95a5a6",
-              "#9b59b6",
-              "#f1c40f",
-              "#e74c3c",
-              "#34495e"
-            ],
-          }],
-          labels: [
-            '#1 ['+parseInt(100*prioridade1/(count_alunos-nao_definido))+'%]',
-            '#2 ['+parseInt(100*prioridade2/(count_alunos-nao_definido))+'%]',
-            '#3 ['+parseInt(100*prioridade3/(count_alunos-nao_definido))+'%]',
-            '#4 ['+parseInt(100*prioridade4/(count_alunos-nao_definido))+'%]',
-            '#5 ['+parseInt(100*prioridade5/(count_alunos-nao_definido))+'%]',
-            '#>=6 ['+parseInt(100*prioridade6m/(count_alunos-nao_definido))+'%]',
-          ]
-        },
-        options: {
-          responsive: true,
-          title: {
-                display: true,
-                text: 'Proporção entre prioridade alocada dos alunos',
-                position: "top",
+      function mostra_grafico() { // REFERENTE AO PIE CHART
+        var config = {     // REFERENTE AO PIE CHART
+          type: 'pie',
+          data: {
+            datasets: [{
+              data: [
+                prioridade1,
+                prioridade2,
+                prioridade3,
+                prioridade4,
+                prioridade5,
+                prioridade6m,
+              ],
+              backgroundColor: [
+                "#2ecc71",
+                "#3498db",
+                "#95a5a6",
+                "#9b59b6",
+                "#f1c40f",
+                "#e74c3c",
+                "#34495e"
+              ],
+            }],
+            labels: [
+              '#1 ['+parseInt(100*prioridade1/(count_alunos-nao_definido))+'%]',
+              '#2 ['+parseInt(100*prioridade2/(count_alunos-nao_definido))+'%]',
+              '#3 ['+parseInt(100*prioridade3/(count_alunos-nao_definido))+'%]',
+              '#4 ['+parseInt(100*prioridade4/(count_alunos-nao_definido))+'%]',
+              '#5 ['+parseInt(100*prioridade5/(count_alunos-nao_definido))+'%]',
+              '#>=6 ['+parseInt(100*prioridade6m/(count_alunos-nao_definido))+'%]',
+            ]
           },
-          legend: {
-            display: true,
-            position: "bottom",
-            labels: {
-              fontColor: "#333",
-              fontSize: 14
+          options: {
+            responsive: true,
+            title: {
+                  display: true,
+                  text: 'Proporção entre prioridade alocada dos alunos',
+                  position: "top",
+            },
+            legend: {
+              display: true,
+              position: "bottom",
+              labels: {
+                fontColor: "#333",
+                fontSize: 14
+              }
             }
           }
-        }
-      };
+        };
 
-      var context = $("#chart-area").get(0).getContext('2d'); // REFERENTE AO PIE CHART
-      window.myPie = new Chart(context, config); // REFERENTE AO PIE CHART
+        var context = $("#chart-area").get(0).getContext('2d'); // REFERENTE AO PIE CHART
+        window.myPie = new Chart(context, config); // REFERENTE AO PIE CHART
+      }
 
-    }
-
-
-    function atualizar_informacoes() {
       ($('#logo').prop('checked') ? $('.logo').show() : $('.logo').hide());
       ($('#descricao').prop('checked') ? $('.descricao').show() : $('.descricao').hide());
       ($('#organizacao').prop('checked') ? $('.organizacao').show() : $('.organizacao').hide());
@@ -282,41 +263,36 @@
 
       {% comment %} // Só mostra informação de semestre se edição é todas {% endcomment %}
       ($("#filterEdicao option:selected").attr("value") == "todas" ? $('.semestre').show() : $('.semestre').hide());
-    }
 
+      filtra_data();
+      mostra_grafico();
 
-    $(".filter").change(function(){
-      $("#spinner").css("visibility", "visible");
-      var edicao = $("#filterEdicao option:selected").attr("value");
-      $.ajax({
-          type: "POST",
-          url: "{% url 'projetos_fechados' %}",
-          data: {
-              edicao: edicao,
-              'csrfmiddlewaretoken': '{{ csrf_token }}',
-          },
-          success: function(response){
-              $("div.projetos").replaceWith($("div.projetos",response));
-              carrega_pagina();
-              atualizar_informacoes();
-              $("#spinner").css("visibility", "hidden");
-          },
-          error: function(response) {
-              console.log('error')
-          }
-      });
-    });
+    </script>
 
-  </script>
+    {% endif %}
 
-  {% comment %} Esconde informações para impressão {% endcomment %}
-  <script>
-    document.getElementById("impressora").addEventListener("click", function() {
+    <script>
+      {% comment %} Esconde informações para impressão {% endcomment %}
+      document.getElementById("impressora").addEventListener("click", function() {
         $('#informacoes').hide()
         $('.logo_impressoras').hide()
         $('.topnav').hide()
         $(".imprimir").removeAttr('href');
-    });
+      });
+    </script>
+
+    <script>
+      function carrega_pagina() {
+        {% include "edicoes_ajax.js" %}
+      };
+    </script>
+
+  </div>
+  <p>&nbsp;</p>
+
+  <script>
+    $(".filter").change(carrega_pagina);    
+    $(document).ready(carrega_pagina);
   </script>
 
 {% endblock %}
