melhor seletor de edição

--- a/templates/edicoes_ajax.html
+++ b/templates/edicoes_ajax.html
@@ -4,6 +4,10 @@
     Data: 4 de Fevereiro de 2021
 {% endcomment %}
 
+
+{% comment %} OBSOLETO {% endcomment %} 
+
+
 {% if edicoes %}
   <script>
 
