--- a/professores/templates/professores/todos_professores.html
+++ b/professores/templates/professores/todos_professores.html
@@ -6,9 +6,9 @@
 {% endcomment %}
 
 {% block head %}
-  {% with tabela='ProfessoresTable' %}
-    {% include "tabelas.html" %}
-  {% endwith %}
+
+  {% include "tabelas_includes.html" %}
+  
 {% endblock %}
 
 {% block content %}
@@ -60,4 +60,17 @@
     <p>Não existem professores cadastradas.</p>
   {% endif %}
   <p>&nbsp;</p>
+
+  <script>
+
+    function carrega_pagina(){
+      {% include "tooltip.js" %}
+      {% with tabela='Professores' %}
+        {% include "tabelas_scripts.html" %}
+      {% endwith %}
+    }
+    window.onload = carrega_pagina
+
+  </script>
+
 {% endblock %}
