--- a/propostas/templates/propostas/propostas_apresentadas.html
+++ b/propostas/templates/propostas/propostas_apresentadas.html
@@ -622,7 +622,7 @@
 
     <script>
       function carrega_pagina() {
-        {% with tabela='PropostasTable' %}
+        {% with tabela='Propostas' %}
           {% include "edicoes_ajax.js" %}
         {% endwith %}
       };
