--- a/administracao/templates/administracao/emails.html
+++ b/administracao/templates/administracao/emails.html
@@ -127,22 +127,22 @@
   <br>
 
   <strong>Por projeto</strong>
+  <label class="form-check-label">(</label>
   <small>
-    <label class="form-check-label">(&nbsp;incluir:&nbsp;</label>
-    <div class="form-check form-check-inline">
+    <div class="form-check form-check-inline mr-1">
       <input class="form-check-input" type="checkbox" id="estudantes" value="estudantes" checked>
       <label class="form-check-label" for="estudantes">Estudantes</label>
     </div>
-    <div class="form-check form-check-inline">
+    <div class="form-check form-check-inline mr-1">
       <input class="form-check-input" type="checkbox" id="orientador" value="orientador" checked>
       <label class="form-check-label" for="orientador">Orientador</label>
     </div>
-    <div class="form-check form-check-inline">
+    <div class="form-check form-check-inline mr-0">
       <input class="form-check-input" type="checkbox" id="parceiros" value="parceiros" checked>
       <label class="form-check-label" for="parceiros">Parceiros</label>
     </div>
-    <label class="form-check-label">)</label>
   </small>
+  <label class="form-check-label">)</label>
 
 
   <div class="row align-items-start mb-2">
