--- a/professores/templates/professores/index_professor.html
+++ b/professores/templates/professores/index_professor.html
@@ -10,12 +10,12 @@
     <h5>Agendamentos</h5>
     <ul>
         <a href="{% url 'bancas_index' %}"><li>Bancas</li></a>
-        <a href="{% url 'dinamicas' 'proximas' %}"><li>Dinâmicas</li></a>
+        <a href="{% url 'dinamicas' %}"><li>Dinâmicas</li></a>
     </ul>
 
     <h5>Estudantes</h5>
     <ul>
-        <a href="{% url 'alunos_inscrevendo' %}"><li>Por Semestre</li></a>
+        <a href="{% url 'alunos_inscritos' %}"><li>Por Semestre</li></a>
     </ul>
 
     <h5>Áreas de Interesse</h5>
