--- a/projetos/templates/projetos/projetos_fechados.html
+++ b/projetos/templates/projetos/projetos_fechados.html
@@ -48,9 +48,10 @@
     <b>Informações: </b>&nbsp;
     <label><input id="logo" onchange="($(this).prop('checked') ? $('.logo').show() : $('.logo').hide())" type="checkbox" checked /> Logo</label>&nbsp;&nbsp;&nbsp;
     <label><input id="descricao" onchange="($(this).prop('checked') ? $('.descricao').show() : $('.descricao').hide())" type="checkbox" checked /> Descrição</label>&nbsp;&nbsp;&nbsp;
-    <label><input id="organizacao" onchange="($(this).prop('checked') ? $('.organizacao').show() : $('.organizacao').hide())" type="checkbox" checked /> Organização</label>&nbsp;&nbsp;&nbsp;
     <label><input id="orientador" onchange="($(this).prop('checked') ? $('.orientador').show() : $('.orientador').hide())" type="checkbox" checked /> Orientador</label>&nbsp;&nbsp;&nbsp;
     <label><input id="estudantes" onchange="($(this).prop('checked') ? $('.estudantes').show() : $('.estudantes').hide())" type="checkbox" checked /> Estudantes</label>&nbsp;&nbsp;&nbsp;
+    <label><input id="organizacao" onchange="($(this).prop('checked') ? $('.organizacao').show() : $('.organizacao').hide())" type="checkbox" checked /> Organização</label>&nbsp;&nbsp;&nbsp;
+    <label><input id="conexoes" onchange="($(this).prop('checked') ? $('.conexoes').show() : $('.conexoes').hide())" type="checkbox" checked /> Conexões</label>&nbsp;&nbsp;&nbsp;
   </span>
 
   <script>
@@ -64,15 +65,16 @@
     
     {% if projetos %}
       <table id="projetos">
-      {% for projeto, prioridades, conexoes in projetos %} 
-        <tr id="two" class="row" data-type="{{projeto.ano}}.{{projeto.semestre}}"><td id="ptd">
+      {% for projeto, prioridades, cooperacoes, conexoes in projetos %} 
+        <tr id="two" class="row" data-type="{{projeto.ano}}.{{projeto.semestre}}">
+        <td id="ptd" style="margin-bottom:3em;">
         <span class="logo">
           {% if projeto.organizacao.logotipo %}
             <a href="{% url 'organizacao_completo' projeto.organizacao.id %}">
               <img class="logotipo_left" src="{{ projeto.organizacao.logotipo.url }}" alt="{{ projeto.organizacao.sigla }}">
             </a>
           {% endif %}
-          {% for conexao in conexoes %}
+          {% for conexao in cooperacoes %}
             {% if conexao.parceiro and conexao.parceiro.organizacao and conexao.parceiro.organizacao.logotipo %}
               &nbsp;
               <a href="{% url 'organizacao_completo' conexao.parceiro.organizacao.id %}">
@@ -101,20 +103,6 @@
           {% endif %}
         </p>
 
-        <p class="organizacao" style="margin-left:1em;">Organização:
-          <a class="imprimir" href="{% url 'organizacao_completo' projeto.organizacao.id %}">
-            {{ projeto.organizacao.nome }}
-          </a>
-          {% for conexao in conexoes %}
-            {% if conexao.parceiro and conexao.parceiro.organizacao %}
-              &nbsp;&nbsp;&nbsp;&nbsp;colaboração:
-              <a href="{% url 'organizacao_completo' conexao.parceiro.organizacao.id %}">
-                {{ conexao.parceiro.organizacao.nome }}
-              </a>
-            {% endif %}
-          {% endfor %}
-        </p>
-
         {% if projeto.avancado %}
           <p style="margin-left:1em;">Tipo: <font color="red">PFE Avançado</font></p>
         {% endif %}
@@ -134,7 +122,7 @@
         </p>
         
         <p class="estudantes" style="margin-left:1em;">Estudantes:</p>
-        <ol class="estudantes">
+        <ol class="estudantes" style="margin-bottom:5px;">
         {% for aluno,prioridade in prioridades %}
           <li><a class="imprimir" href="{% url 'aluno_detail' aluno.id %}"
               data-toggle="tooltip" data-html="true" animation="true" title="
@@ -152,11 +140,77 @@
           </li>
         {% endfor %}
         </ol>
-        <br>
+
+        <p class="organizacao" style="margin-left:1em;">Organização:
+          <a class="imprimir" href="{% url 'organizacao_completo' projeto.organizacao.id %}">
+            {{ projeto.organizacao.nome }}
+          </a>
+          {% for cooperacao in cooperacoes %}
+            {% if cooperacao.parceiro and cooperacao.parceiro.organizacao %}
+              &nbsp;&nbsp;&nbsp;&nbsp;colaboração:
+              <a href="{% url 'organizacao_completo' cooperacao.parceiro.organizacao.id %}">
+                {{ cooperacao.parceiro.organizacao.nome }}
+              </a>
+            {% endif %}
+          {% endfor %}
+        </p>
+
+        <ol class="conexoes" style="margin-bottom:0px;">
+        {% for conexao in conexoes %}
+          <li>
+          {% if conexao.parceiro.user.is_active %}
+            <a class="imprimir" href="{% url 'parceiro_detail' conexao.parceiro.id %}">
+              {{ conexao.parceiro.user.get_full_name }}
+            </a>
+            <a href="mailto:{{conexao.parceiro.user.email}}"> &lt;{{conexao.parceiro.user.email}}&gt;</a>
+            <span>
+              {% if conexao.gestor_responsavel %}
+                [gestor responsavel]
+              {% endif %}
+              {% if conexao.mentor_tecnico %}
+                [mentor técnico]
+              {% endif %}
+              {% if conexao.recursos_humanos %}
+                [recursos humanos]
+              {% endif %}
+              {% if conexao.colaboracao %}
+                [colaboração]
+              {% endif %}
+              {% if conexao.observacao %}
+                &nbsp;&nbsp;obs: {{conexao.observacao}}
+              {% endif %}
+            </span>
+          {% else %}
+            <a class="imprimir" href="{% url 'parceiro_detail' conexao.parceiro.id %}" style="color: LightBlue;">
+              {{ conexao.parceiro.user.get_full_name }}
+            </a>
+            <a href="mailto:{{conexao.parceiro.user.email}}" style="color: LightBlue;"> &lt;{{conexao.parceiro.user.email}}&gt;</a>
+            <span style="color: lightgrey;">
+            {% if conexao.gestor_responsavel %}
+              [gestor responsavel]
+            {% endif %}
+            {% if conexao.mentor_tecnico %}
+              [mentor técnico]
+            {% endif %}
+            {% if conexao.recursos_humanos %}
+              [recursos humanos]
+            {% endif %}
+            {% if conexao.colaboracao %}
+              [colaboração]
+            {% endif %}
+            {% if conexao.observacao %}
+              &nbsp;&nbsp;obs: {{conexao.observacao}}
+            {% endif %}
+            </span>
+            <br>
+          {% endif %}
+          </li>
+        {% endfor %}
+        </ol>
         </td></tr>
       {% endfor %}
       </table>
-      
+
 
       <hr>
       <b>Total de projetos = <span id="myCountProj">{{ numero_projetos }}</span> </b> <br>
